--- a/config.json
+++ b/config.json
@@ -27,6 +27,7 @@
 		"popo, ti eipes twra\nemeina me anoixto to... programma",
 		"Exeis dei file I/O me threads sto linux?",
 		"Kai ta Ubuntu kala einai",
-		"kapote hmoun fanatikos tis micro$oft"
+		"kapote hmoun fanatikos tis micro$oft",
+		"Linux edw, Linux ekei, Linux kai parapera, Linux ston ourano... Linux kai ston aera!"
 	]
 }
