--- a/config.json
+++ b/config.json
@@ -16,6 +16,9 @@
 	// Default repo to substitute when not provided for the github command
 	"github_repo": "foss-teimes",
 
+	// Absolute path of mpd database folder
+	"mpd_database": "/home/free/Music",
+
 	// Multiline quote sentences must be seperated by the newline character (\n)
 	// Newline char is optional if the sentence is the last OR the only one from a quote
 	// If a color is provided to a quote starting with a number, a space must be added to avoid messing with the escape sequence
