--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
 	"github_repo": "foss-teimes",
 
 	// Absolute path of mpd database folder
-	"mpd_database": "/home/freestyler/music",
+	"mpd_database": "~/Music",
 
 	// Multiline quote sentences must be seperated by the newline character (\n)
 	// Newline char is optional if the sentence is the last OR the only one from a quote
