--- a/config.json
+++ b/config.json
@@ -18,8 +18,13 @@
 	// Default repo to substitute when not provided for the github command
 	"github_repo": "foss-teimes",
 
-	// Absolute path of mpd database folder
+	// Murmur port
+	"murmur_port": "6502",
+
+	// MPD settings
+	"mpd_port": "6600",
 	"mpd_database": "~/Music",
+	"mpd_random_mode_file": "~/.mpd_random",
 
 	// Multiline quote sentences must be seperated by the newline character (\n)
 	// Newline char is optional if the sentence is the last OR the only one from a quote
