--- a/config.json
+++ b/config.json
@@ -38,6 +38,7 @@
 		"Exeis dei file I/O me threads sto linux?",
 		"Kai ta Ubuntu kala einai",
 		"kapote hmoun fanatikos tis micro$oft",
-		"Linux edw, Linux ekei, Linux kai parapera, Linux ston ourano... Linux kai ston aera!"
+		"Linux edw, Linux ekei, Linux kai parapera, Linux ston ourano... Linux kai ston aera!",
+		"kani overdie"
 	]
 }
