--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
 	"server": "chat.freenode.net",
 	"port": 6667,
 	"nick": "fossbot",
-	"nick_pwd": "xxxxxxxx",
+	"nick_pwd": "",
 	"user": "bot",
 	"quit_message": "segfault",
 
