--- a/config.json
+++ b/config.json
@@ -33,7 +33,7 @@
 	"oauth_token_secret":    "",
 
 	// Only nicknames on this list are authorized to use twitter commands
-	"twitter_access_list": [ "freestyl3r", "tomkap", "charkost", "ZEDGR", "LouLakos", "erevos" ],
+	"twitter_access_list": [ "freestyl3r", "tomkap", "charkost", "ZEDGR", "LouLakos", "erevos", "AW3i", "avgerinos" ],
 
 	// Multiline quote sentences must be seperated by the newline character (\n)
 	// Newline char is optional if the sentence is the last OR the only one from a quote
