--- a/config.json
+++ b/config.json
@@ -48,6 +48,7 @@
 		"Kai ta Ubuntu kala einai",
 		"kapote hmoun fanatikos tis micro$oft",
 		"Linux edw, Linux ekei, Linux kai parapera, Linux ston ourano... Linux kai ston aera!",
-		"kani overdie"
+		"kani overdie",
+        "About LthIX: Programmer. Designer. Microsoft Enthusiast."
 	]
 }
