--- a/config.json
+++ b/config.json
@@ -49,6 +49,7 @@
 		"kapote hmoun fanatikos tis micro$oft",
 		"Linux edw, Linux ekei, Linux kai parapera, Linux ston ourano... Linux kai ston aera!",
 		"kani overdie",
-		"About LthIX: Programmer. Designer. Microsoft Enthusiast."
+		"About LthIX: Programmer. Designer. Microsoft Enthusiast.",
+		"LthIX: Το θέμα είναι να μην είσαι με την μάζα. Χρησιμοποιείς Chrome? Χρησιμοποιώ IE!"
 	]
 }
