Create wrapper for mmap and a mutex that can be used across processes. The check to see if a user is identified, a sub-process will send a request to the Nickserv and then our main process will use an unnamed pipe to send the Nickserv's reply back to the child process. If multiple requests were started from child processes to the Nickserv, main() has no way to tell from which child the request was initiated. If 2 users (one identified and one not) start a command that requires authorization, they could reach each others responses. This commit introduces a inter-process mutex to hopefully fix this case.

--- a/config.json
+++ b/config.json
@@ -33,8 +33,8 @@
 	"oauth_token":           "",
 	"oauth_token_secret":    "",
 
-	// Only nicknames on this list are authorized to use twitter commands
-	"twitter_access_list": [ ],
+	// Only nicknames on this list are authorized to use certain commands (like tweet)
+	"access_list": [ ],
 
 	// Multiline quote sentences must be seperated by the newline character (\n)
 	// Newline char is optional if the sentence is the last OR the only one from a quote
