add quote and some tests

--- a/config.json
+++ b/config.json
@@ -51,6 +51,7 @@
 		"Linux edw, Linux ekei, Linux kai parapera, Linux ston ourano... Linux kai ston aera!",
 		"kani overdie",
 		"About LthIX: Programmer. Designer. Microsoft Enthusiast.",
-		"LthIX: Το θέμα είναι να μην είσαι με την μάζα. Χρησιμοποιείς Chrome? Χρησιμοποιώ IE!"
+		"LthIX: Το θέμα είναι να μην είσαι με την μάζα. Χρησιμοποιείς Chrome? Χρησιμοποιώ IE!",
+		"re malaka usareis tmux?"
 	]
 }
