--- a/config.json
+++ b/config.json
@@ -52,6 +52,7 @@
 		"kani overdie",
 		"About LthIX: Programmer. Designer. Microsoft Enthusiast.",
 		"LthIX: Το θέμα είναι να μην είσαι με την μάζα. Χρησιμοποιείς Chrome? Χρησιμοποιώ IE!",
-		"re malaka usareis tmux?"
+		"re malaka usareis tmux?",
+		"8 einai ta kalwdia stou ethernet to visma, 8 fores mou zhthses na sou ton kanw klysma"
 	]
 }
