--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
 	"channels": [ "#foss-teimes" ],
 
 	// String to reply on ctcp version
-	"bot_version": "irC Bot - http://github.com/foss-teimes/irc-bot",
+	"bot_version": "irC Bot - https://github.com/foss-teiwest/irc-bot",
 
 	// Set to false to only show errors
 	"verbose": true,
@@ -26,6 +26,9 @@
 	"mpd_database": "~/Music",
 	"mpd_random_file": "~/.mpd_random",
 
+	// Named pipe (FIFO) path
+	"fifo_path": "/tmp/irc-bot",
+
 	// Twitter settings
 	"twitter_profile_url":   "https://twitter.com/fossteiwest",
 	"oauth_consumer_key":    "",
@@ -34,7 +37,7 @@
 	"oauth_token_secret":    "",
 
 	// Only nicknames on this list are authorized to use certain commands (like tweet)
-	"access_list": [ ],
+	"access_list": [ "freestyl3r" ],
 
 	// Multiline quote sentences must be seperated by the newline character (\n)
 	// Newline char is optional if the sentence is the last OR the only one from a quote
