--- a/config.json
+++ b/config.json
@@ -9,11 +9,18 @@
 	// Comma seperated list of channels
 	"channels": [ "#foss-teimes" ],
 
+	// Only people in this list are allowed to use certain commands like tweet, adding quotes etc
+	// They will be merged with the users already present in the database
+	"access_list": [ "freestyl3r" ],
+
+	// Set to false to show errors only
+	"verbose": true,
+
+	// Database to put user access, quotes and more
+	"db_name": "~/irc-bot.db",
+
 	// String to reply on ctcp version
 	"bot_version": "irC Bot - https://github.com/foss-teiwest/irc-bot",
-
-	// Set to false to only show errors
-	"verbose": true,
 
 	// Default repo to substitute when not provided for the github command
 	"github_repo": "foss-teiwest",
@@ -29,35 +36,9 @@
 	// Named pipe (FIFO) path
 	"fifo_name": "/tmp/irc-bot",
 
-	// Database to put user access, quotes and more
-	"db_name": "irc-bot.db",
-
-	// Nicknames allowed to use certain commands like tweet, adding quotes etc
-	// Those will be merged with the users already present in the database
-	"access_list": [ "freestyl3r" ],
-
 	// Twitter settings
 	"oauth_consumer_key":    "",
 	"oauth_consumer_secret": "",
 	"oauth_token":           "",
 	"oauth_token_secret":    "",
-
-	// Multiline quote sentences must be seperated by the newline character (\n)
-	// Newline char is optional if the sentence is the last OR the only one from a quote
-	"fail_quotes":
-	[
-		"I mpala einai strogili\nto gipedo einai paralilogramo\n11 autoi, 11 emeis sinolo 23\nkai tha boun kai 3 allages apo kathe omada sinolo 29!",
-		"fail indeed",
-		"fail den les tipota",
-		"popo, ti eipes twra\nemeina me anoixto to... programma",
-		"Exeis dei file I/O me threads sto linux?",
-		"Kai ta Ubuntu kala einai",
-		"kapote hmoun fanatikos tis micro$oft",
-		"Linux edw, Linux ekei, Linux kai parapera, Linux ston ourano... Linux kai ston aera!",
-		"kani overdie",
-		"About LthIX: Programmer. Designer. Microsoft Enthusiast.",
-		"LthIX: Το θέμα είναι να μην είσαι με την μάζα. Χρησιμοποιείς Chrome? Χρησιμοποιώ IE!",
-		"re malaka usareis tmux?",
-		"8 einai ta kalwdia stou ethernet to visma, 8 fores mou zhthses na sou ton kanw klysma"
-	]
 }
