remove wolfram key from source code

--- a/config.json
+++ b/config.json
@@ -39,6 +39,9 @@
 	// Google URL shortener API key
 	"google_shortener_api_key": "",
 
+	// Wolfram Alpha API key
+	"wolframalpha_api_key": "",
+
 	// Twitter settings
 	"oauth_consumer_key":    "",
 	"oauth_consumer_secret": "",
